--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="dark">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></title>
-    <meta name="description" content="genfly Generated Project" />
-    <meta name="author" content="genfly" />
+    <title>Supabase | The Postgres development platform</title>
+    <meta name="description" content="Supabase is the Postgres development platform. Start your project with a Postgres database, Authentication, instant APIs, Edge Functions, Realtime subscriptions, Storage, and Vector embeddings." />
+    <meta name="author" content="Supabase" />
     <meta property="og:image" content="/og-image.png" />
   </head>
 
-  <body>
+  <body style="overflow: auto; color-scheme: dark;">
     <div id="root"></div>
     <!-- CRITICAL: This script MUST be retained for genfly to function properly! Do NOT remove! -->
     <!-- genfly editor dependency: https://www.genfly.dev/editor.js -->
